objects/AcctSeedERP__Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>AS_Unit_Price__c</fullName>
        <formula>AcctSeedERP__Product__r.AcctSeed__Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AS Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account listed on the Sales Order &quot;Customer&quot; field</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <inlineHelpText>Notes from the Accounting Dept on this requisition- Used on Service Construction Requisitions only</inlineHelpText>
        <label>Accounting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Sales Order Line (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Sales_Order_Line1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Sales Order Line (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Sales_Order_Line2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufacturing_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Order</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Major Component reqs, enter the exact product you are ordering. For all other reqs match the product name to the Line Item/Cost Code.   If that cannot be found enter Miscellaneous.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Line Item/Cost Code where the cost should be allocated</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Project the req is associated with- automatically filled in when creating the req from the Project</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Sales Order Line (Project)</relationshipLabel>
        <relationshipName>Sales_Order_Line1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>PO Line created from the req
This is filled in when the req is converted to a PO</inlineHelpText>
        <label>Purchase Order Line</label>
        <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <summarizedField>AcctSeedERP__Sales_Order_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Sales_Order_Inventory_Movement__c.AcctSeedERP__Sales_Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Manufactured__c</fullName>
        <formula>AcctSeedERP__Manufacturing_Order__r.AcctSeedERP__Quantity_Built__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Manufactured</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Needed__c</fullName>
        <formula>AcctSeedERP__Quantity_Ordered__c - AcctSeedERP__Quantity_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Needed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Ordered_Manufacturing__c</fullName>
        <formula>AcctSeedERP__Manufacturing_Order__r.AcctSeedERP__Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Ordered Manufacturing</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Ordered_Supplier__c</fullName>
        <formula>AcctSeedERP__Purchase_Order_Line__r.AcctSeedERP__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Ordered Supplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Ordered__c</fullName>
        <inlineHelpText>Quantity of the material needed
For Sub reqs, always enter 1</inlineHelpText>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Received_Supplier__c</fullName>
        <formula>AcctSeedERP__Purchase_Order_Line__r.AcctSeedERP__Quantity_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Received Supplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Shipped__c</fullName>
        <label>Quantity Shipped</label>
        <summarizedField>AcctSeedERP__Shipment_Line__c.AcctSeedERP__Quantity_Shipped__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Shipment_Line__c.AcctSeedERP__Sales_Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order__c</fullName>
        <inlineHelpText>Sales Order associated with the requisition
Automatically gets entered when creating a req from the Project</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Total__c</fullName>
        <formula>AcctSeedERP__Unit_Price__c * AcctSeedERP__Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Additional notes or information on the requisition- enter any clarifications or ordering information here</inlineHelpText>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backcharge_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Party who should be backcharged for this expense- Must be listed as an account in Salesforce</inlineHelpText>
        <label>Backcharge To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Requisitions (Backcharge To)</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this charge be backcharged to someone else? If so, check this box and list the party to backcharge in the &quot;Backcharge To&quot; field</inlineHelpText>
        <label>Backcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>AcctSeedERP__Project_Task__r.Cost_Code__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Creator_ID__c</fullName>
        <inlineHelpText>updates field automatically via WF whenever Con Req is created with SF ID, used for roll ups.</inlineHelpText>
        <label>Con Req Creator ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con Req Group</label>
        <referenceTo>Con_Req_Group__c</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Req_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,   &quot;Construction Req Link&quot; , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Req Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Req__c</fullName>
        <inlineHelpText>SOL# for Service Requisitions
Will be filled out upon Approval of the Requisition</inlineHelpText>
        <label>Construction Req Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Code_Number__c</fullName>
        <formula>AcctSeedERP__Project_Task__r.Cost_Code__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Code Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to a Borrego list of cost codes</inlineHelpText>
        <label>Cost Code</label>
        <referenceTo>Cost_Code__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Record__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used for roll ups and formulas only counts the record as one</inlineHelpText>
        <label>Count of Record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>AcctSeedERP__Sales_Order__r.AcctSeedERP__Customer__r.Name</formula>
        <inlineHelpText>This is the Customer entered on the Sales Order.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Used for the development cost reports. This will not be visible on any layouts.</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Cost_Line_Item__c</fullName>
        <inlineHelpText>Select the type of development cost for the construction requisition.</inlineHelpText>
        <label>Development Cost Line Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Development_Cost_Line_Item</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes if the cost is during the development phase of the project- Driven by WIP Status on the Project</inlineHelpText>
        <label>Development Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_SOL__c</fullName>
        <formula>IF( 
OR( Cost_Code_Number__c = &apos;01-1218&apos;, Cost_Code_Number__c = &apos;03-1318&apos;, Cost_Code_Number__c = &apos;03-1418&apos;, Cost_Code_Number__c = &apos;03-1518&apos;, Cost_Code_Number__c = &apos;03-1618&apos;), 
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering SOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <inlineHelpText>Estimated shipping/freight on the requisition</inlineHelpText>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field set automatically by trigger. If True, means there is at least one attachment associated with the Sales Order Line record.</description>
        <inlineHelpText>Hidden field set automatically by trigger. If True, means there is at least one attachment associated with the Sales Order Line record.</inlineHelpText>
        <label>IsAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for service con reqs editing abilities</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_CR__c</fullName>
        <formula>IF(
OR( RecordTypeId = &apos;012800000007gug&apos;, RecordTypeId = &apos;012800000007guh&apos; ), TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_To_Exceed__c</fullName>
        <inlineHelpText>Indicates if the PO will be a Not To Exceed PO. Enter an estimated amount that will true up once the final invoice is received.</inlineHelpText>
        <label>Not To Exceed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ok_to_Submit__c</fullName>
        <formula>IF( AND(Vendor__r.AcctSeed__Accounting_Active__c =TRUE, Remaining_Available_Budget__c &gt;=0,IsAttachment__c &lt;&gt;FALSE), IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015Isw&quot;, &quot;WHITE&quot;),

IF(ISPICKVAL(Status__c,&quot;Approved&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015IuY&quot;, &quot;WHITE&quot;),
IF(Vendor__r.AcctSeed__Accounting_Active__c =FALSE,IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000016gx0&quot;, &quot;WHITE&quot;),
IF(IsAttachment__c =FALSE,IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015sR0&quot;, &quot;WHITE&quot;),

IF(Remaining_Available_Budget__c &lt;0,IMAGE(&quot;/servlet/servlet.FileDownload?file=015800000015ItV&quot;, &quot;WHITE&quot;),

&quot;NO&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Notes whether or not the req is OK to Submit, providing details if needed</inlineHelpText>
        <label>Ok to Submit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <description>Hidden field used by class file ConstructionReqControllerExt and VF page SalesOrderLine_new to help populate the real Product field.</description>
        <label>Opportunity Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pulls from the Project Owner field on the Project</inlineHelpText>
        <label>Project PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Products__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Products__c</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racking_Watts__c</fullName>
        <inlineHelpText>Watts on the racking order
Required when the req is for racking</inlineHelpText>
        <label>Racking Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Available_Budget__c</fullName>
        <formula>IF(Cost_Code_Number__c=&quot;09-1909&quot;, 0,
IF(RecordType.Name=&quot;Service&quot;,0,
IF( AND(Category__c&lt;&gt; &quot;OM&quot;, AcctSeedERP__Project__r.PM_Lock__c = TRUE), AcctSeedERP__Project_Task__r.Active_Budget__c - AcctSeedERP__Project_Task__r.Line_Item_Total__c, 
IF( AND(Category__c&lt;&gt; &quot;OM&quot;, AcctSeedERP__Project__r.PM_Lock__c = FALSE, AcctSeedERP__Project__r.Sales_Budget_Locked__c= TRUE), AcctSeedERP__Project_Task__r.PM_Budget__c -AcctSeedERP__Project_Task__r.Line_Item_Total__c, 
IF( AND(Category__c&lt;&gt; &quot;OM&quot;,  AcctSeedERP__Project__r.PM_Lock__c = FALSE,AcctSeedERP__Project__r.Sales_Budget_Locked__c= FALSE), AcctSeedERP__Project_Task__r.Sales_Budget__c -AcctSeedERP__Project_Task__r.Line_Item_Total__c, 

0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget- PO&apos;s- Construction Requisition Total</inlineHelpText>
        <label>Remaining Available Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <inlineHelpText>Date the item is needed or date the work will be performed</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RollUp_Remaining_Available_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field. Set by triggers AS_projectAfterUpdate and ProjectTaskAfter.</description>
        <label>RollUp Remaining Available Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOLine_Total__c</fullName>
        <formula>Unit_Cost__c  *  AcctSeedERP__Quantity_Ordered__c  +  Freight__c  +   Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total of entered unit price X quantity + freight + sales tax + use tax.</inlineHelpText>
        <label>SOLine Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate_Percent__c</fullName>
        <inlineHelpText>This field is stamped with the rate on the Sales Tax Table from the Tax Group on the Project
Will be 0 unless Material Requisition</inlineHelpText>
        <label>Sales Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the Custom table to select tax rate for this Sale Order Line.</inlineHelpText>
        <label>Sales Tax Rate Table</label>
        <referenceTo>Tax_Rate__c</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <formula>IF( OR(RecordType.Name &lt;&gt; &quot;Subcontractor&quot;,RecordType.Name &lt;&gt; &quot;Other Costs&quot;), (AcctSeedERP__Quantity_Ordered__c  *  Unit_Cost__c  *  Sales_Tax_Rate_Percent__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the quantity X unit cost X sales tax rate. Defaults to $0 for Sub and Other Costs</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceVisitID__c</fullName>
        <description>SF ID for related SV</description>
        <formula>Service_Visit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SF ID for related SV</inlineHelpText>
        <label>Service Visit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Visit</label>
        <referenceTo>SV__c</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Where product should be shipped or account the req is related to
Must be an Account in Salesforce</inlineHelpText>
        <label>Ship to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Req- automatically updated with the approval process</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used by PVEngineers to classify the subvendor Account, not requried</description>
        <inlineHelpText>used by PVEngineers to classify the subvendor Account</inlineHelpText>
        <label>Sub-vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Requisitions (Sub-vendor Account)</relationshipLabel>
        <relationshipName>Construction_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>